# DawnSample

./: CMakeLists.txt  vcpkg.json
resources/: .gitignore  pyramid.txt  shader.wgsl
src/: Application.cpp  Application.h  Main.cpp  ResourceManager.cpp  ResourceManager.h  WebGPUUtils.cpp  WebGPUUtils.h
